@@ -32,6 +32,7 @@ Bugs fixed:
 - 2532149 sfcb: instance ops against non-instance MI report no error
 - 2900630 Allow for instances > chunkSize when chunking enabled
 - 2910372 Provider user and params strdup'd but never free'd
+- 2913067 Unused arg for newProviderRegister()
 
 Changes in 1.3.5
 ================
